Some work on the report. WIP.

--- a/report/report.bib
+++ b/report/report.bib
@@ -2,12 +2,54 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Benjamin Geiger at 2013-04-09 16:45:01 -0400 
+%% Created for Benjamin Geiger at 2013-05-05 03:02:52 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{reddit-aboutreddit,
+	Date-Added = {2013-05-05 07:02:18 +0000},
+	Date-Modified = {2013-05-05 07:02:39 +0000},
+	Lastchecked = {Sunday, May 5, 2013},
+	Title = {reddit.com: about reddit},
+	Url = {http://www.reddit.com/about/},
+	Bdsk-Url-1 = {http://www.reddit.com/about/}}
+
+@webpage{metareddit,
+	Date-Added = {2013-05-05 07:00:24 +0000},
+	Date-Modified = {2013-05-05 07:01:06 +0000},
+	Lastchecked = {Sunday, May 5, 2013},
+	Title = {metareddit - all about reddit},
+	Url = {http://metareddit.com/},
+	Bdsk-Url-1 = {http://metareddit.com/}}
+
+@webpage{reddit-thealien,
+	Date-Added = {2013-05-05 03:39:05 +0000},
+	Date-Modified = {2013-05-05 07:02:51 +0000},
+	Lastchecked = {Saturday, May 4, 2013},
+	Title = {reddit.com: the alien},
+	Url = {http://www.reddit.com/about/alien/},
+	Bdsk-Url-1 = {http://www.reddit.com/about/alien/}}
+
+@misc{pycon-socialnetworkanalysis,
+	Author = {Maksim Tsvetotat},
+	Date-Added = {2013-05-04 21:34:38 +0000},
+	Date-Modified = {2013-05-04 21:38:54 +0000},
+	Howpublished = {Presented at PyCon 2012. Available at \url{http://www.youtube.com/watch?v=qgGqaBAEy3Q}.},
+	Title = {Social Network Analysis with Python}}
+
+@book{mckinney2012python,
+	Author = {McKinney, W.},
+	Date-Added = {2013-05-04 21:04:55 +0000},
+	Date-Modified = {2013-05-04 21:04:55 +0000},
+	Isbn = {9781449323615},
+	Publisher = {O'Reilly Media},
+	Title = {Python for Data Analysis},
+	Url = {http://books.google.com/books?id=v3n4\_AK8vu0C},
+	Year = {2012},
+	Bdsk-Url-1 = {http://books.google.com/books?id=v3n4%5C_AK8vu0C}}
 
 @article{scikit-learn,
 	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
@@ -24,7 +66,7 @@
 	Author = {de Hoon, M. J. L. and Imoto, S. and Nolan, J. and Miyano, S.},
 	Date = {2004/06/12},
 	Date-Added = {2013-04-09 20:21:09 +0000},
-	Date-Modified = {2013-04-09 20:21:09 +0000},
+	Date-Modified = {2013-05-04 21:05:44 +0000},
 	Journal = {Bioinformatics},
 	Journal1 = {Bioinformatics},
 	Month = {06},
@@ -32,10 +74,10 @@
 	Pages = {1453--1454},
 	Title = {Open source clustering software},
 	Ty = {JOUR},
-	Url = {http://bioinformatics.oxfordjournals.org/content/20/9/1453.abstract N2 - Summary: We have implemented k-means clustering, hierarchical clustering and self-organizing maps in a single multipurpose open-source library of C routines, callable from other C and C++ programs. Using this library, we have created an improved version of Michael Eisen's well-known Cluster program for Windows, Mac OS X and Linux/Unix. In addition, we generated a Python and a Perl interface to the C Clustering Library, thereby combining the flexibility of a scripting language with the speed of C.Availability: The C Clustering Library and the corresponding Python C extension module Pycluster were released under the Python License, while the Perl module Algorithm::Cluster was released under the Artistic License. The GUI code Cluster 3.0 for Windows, Macintosh and Linux/Unix, as well as the corresponding command-line program, were released under the same license as the original Cluster code. The complete source code is available at http://bonsai.ims.u-tokyo.ac.jp/~mdehoon/software/cluster. Alternatively, Algorithm::Cluster can be downloaded from CPAN, while Pycluster is also available as part of the Biopython distribution.},
+	Url = {http://bioinformatics.oxfordjournals.org/content/20/9/1453.abstract},
 	Volume = {20},
 	Year = {2004},
-	Bdsk-Url-1 = {http://bioinformatics.oxfordjournals.org/content/20/9/1453.abstract%20N2%20-%20Summary:%20We%20have%20implemented%20k-means%20clustering,%20hierarchical%20clustering%20and%20self-organizing%20maps%20in%20a%20single%20multipurpose%20open-source%20library%20of%20C%20routines,%20callable%20from%20other%20C%20and%20C++%20programs.%20Using%20this%20library,%20we%20have%20created%20an%20improved%20version%20of%20Michael%20Eisen's%20well-known%20Cluster%20program%20for%20Windows,%20Mac%20OS%20X%20and%20Linux/Unix.%20In%20addition,%20we%20generated%20a%20Python%20and%20a%20Perl%20interface%20to%20the%20C%20Clustering%20Library,%20thereby%20combining%20the%20flexibility%20of%20a%20scripting%20language%20with%20the%20speed%20of%20C.Availability:%20The%20C%20Clustering%20Library%20and%20the%20corresponding%20Python%20C%20extension%20module%20Pycluster%20were%20released%20under%20the%20Python%20License,%20while%20the%20Perl%20module%20Algorithm::Cluster%20was%20released%20under%20the%20Artistic%20License.%20The%20GUI%20code%20Cluster%203.0%20for%20Windows,%20Macintosh%20and%20Linux/Unix,%20as%20well%20as%20the%20corresponding%20command-line%20program,%20were%20released%20under%20the%20same%20license%20as%20the%20original%20Cluster%20code.%20The%20complete%20source%20code%20is%20available%20at%20http://bonsai.ims.u-tokyo.ac.jp/~mdehoon/software/cluster.%20Alternatively,%20Algorithm::Cluster%20can%20be%20downloaded%20from%20CPAN,%20while%20Pycluster%20is%20also%20available%20as%20part%20of%20the%20Biopython%20distribution.}}
+	Bdsk-Url-1 = {http://bioinformatics.oxfordjournals.org/content/20/9/1453.abstract}}
 
 @article{Zhang2007483,
 	Author = {Shihua Zhang and Rui-Sheng Wang and Xiang-Sun Zhang},
