More work on the report.

--- a/report/report.bib
+++ b/report/report.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Benjamin Geiger at 2013-05-05 03:02:52 -0400 
+%% Created for Benjamin Geiger at 2013-05-05 03:37:01 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{catbasispurrsuit,
+	Author = {Daniel Caturana and David Furry},
+	Booktitle = {SIGBOVIK 2013},
+	Date-Added = {2013-05-05 07:25:44 +0000},
+	Date-Modified = {2013-05-05 07:31:26 +0000},
+	Title = {Cat Basis Purrsuit},
+	Year = {2013}}
 
 @webpage{reddit-aboutreddit,
 	Date-Added = {2013-05-05 07:02:18 +0000},
