--- a/report/report.tex
+++ b/report/report.tex
@@ -196,9 +196,19 @@ they are `thrown away' after that post). We decided that this was
 negligible, as we assumed that most redditors are unlikely to use
 different accounts for closely related subreddits.
 
+\textit{todo: present scores as sums, as worked out}
+
 \section{Results}
 
+\textit{todo: explain reddit api calls}
+
+\textit{todo: explain data acquisition problems}
+
+\textit{todo: give results from partial data}
+
 \section{Conclusions}
+
+\textit{todo: apologize for being a complete and utter fuckwit}
 
 
 
